# rustpanosmcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  PLAN.md  README.md  SECURITY.md  THREAT_MODEL.md  TODO.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-image.yml  security.yml
config/: devices.example.json  devices.mutation.example.json  tokens.example.json
docs/: BENCHMARKS.md  COMPATIBILITY.md  MCP_ROLE_WORKFLOW.md  OPERATIONS.md  PHASE1_ACCEPTANCE.md  PHASE1_OPERATIONS.md  PHASE2_ACCEPTANCE.md  PHASE2_OPERATIONS.md  PHASE3_ACCEPTANCE.md  PHASE3_OPERATIONS.md  PHASE4_ACCEPTANCE.md  V0.2.1_ACCEPTANCE.md  V0.2.2_ACCEPTANCE.md  V0.2_CHANGE_SETS.md  V0.3_PANORAMA_DISCOVERY.md
docs/superpowers/plans/: 2026-07-10-v0.2.1-maintenance.md  2026-07-11-dependency-pr-resolution.md  2026-07-11-v0.2.2-release.md  2026-07-13-readme-quickstart-workflow-link.md  2026-07-13-rust-panosmcp-role-workflow.md
docs/superpowers/specs/: 2026-07-10-v0.2.1-maintenance-design.md  2026-07-11-v0.2.2-release-design.md  2026-07-13-readme-quickstart-workflow-link-design.md  2026-07-13-rust-panosmcp-role-workflow-design.md
fuzz/: Cargo.toml  README.md  deny.toml
fuzz/fuzz_targets/: bearer_header.rs  config_element.rs  token_store.rs  xml_response.rs  xpath.rs
packaging/container/: compose.example.yaml
packaging/systemd/: rust-panosmcp.service  rust-panosmcp.sysusers  rust-panosmcp.tmpfiles
rust-panosmcp/: Cargo.toml
rust-panosmcp-auth/: Cargo.toml
rust-panosmcp-auth/src/: bearer.rs  file.rs  lib.rs  secret.rs  store.rs  token.rs
rust-panosmcp-auth/tests/: token_lookup_benchmark.rs
rust-panosmcp-core/: Cargo.toml
rust-panosmcp-core/src/: client.rs  error.rs  inventory.rs  lib.rs  mutation.rs  observability.rs  tools.rs  xml.rs
rust-panosmcp-core/tests/: https_client.rs  lab_firewall.rs  lab_mutation.rs  mutation_lifecycle.rs  panos_version_matrix.rs  xml_fixture.rs
rust-panosmcp-core/tests/fixtures/: system-info-success.xml
rust-panosmcp/src/: cli.rs  cli_validate.rs  http_transport.rs  lib.rs  main.rs  tls.rs  token_cmd.rs
rust-panosmcp/tests/: http_auth.rs  lab_mcp_firewall.rs  mcp_https.rs  mcp_smoke.rs
scripts/: benchmark-python-compare.py  build-release.sh  deploy-lab-certificate.sh  test-panos-matrix.sh  verify-packaging.sh  verify-reproducible-build.sh
