[workspace]
members = [
    "rust-panosmcp",
    "rust-panosmcp-auth",
    "rust-panosmcp-core",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rust-panosmcp"
authors = ["fastrevmd-lab"]

[workspace.dependencies]
quick-xml = "0.41"
rmcp = { version = "2", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
