[workspace]
members = [
    "rust-panosmcp",
    "rust-panosmcp-auth",
    "rust-panosmcp-core",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rust-panosmcp"
authors = ["fastrevmd-lab"]

[workspace.dependencies]
arc-swap = "1"
axum = "0.8"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
fastrand = "2"
futures-util = "0.3"
getrandom = "0.4"
http = "1"
quick-xml = "0.41"
reqwest = { version = "0.13", default-features = false, features = ["form", "rustls-no-provider", "stream"] }
rmcp = { version = "2", default-features = false }
rustix = { version = "1", features = ["fs", "process"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
