[package]
name = "rust-panosmcp-auth"
description = "Authentication primitives for rust-panosmcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
