[package]
name = "rust-panosmcp-auth"
description = "Authentication primitives for rust-panosmcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
getrandom.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

tempfile = "3"

[lints]
workspace = true
