[package]
name = "rust-panosmcp-core"
description = "Vendor client and tool logic for rust-panosmcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
