[package]
name = "rust-panosmcp"
description = "Secure, async MCP server for PAN-OS firewalls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rust-panosmcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rmcp = { workspace = true, features = ["macros", "schemars", "server", "transport-io"] }
rust-panosmcp-core = { version = "0.1.0", path = "../rust-panosmcp-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
rcgen = "0.14"
rmcp = { workspace = true, features = ["client", "server", "transport-io"] }
rustls.workspace = true
tempfile = "3"

[lints]
workspace = true
