[package]
name = "rust-panosmcp"
description = "Secure, async MCP server for PAN-OS firewalls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rust-panosmcp"
path = "src/main.rs"

[dependencies]
arc-swap.workspace = true
axum.workspace = true
axum-server.workspace = true
clap.workspace = true
http.workspace = true
rmcp = { workspace = true, features = ["macros", "schemars", "server", "transport-io", "transport-streamable-http-server"] }
rust-panosmcp-auth = { version = "0.2.0", path = "../rust-panosmcp-auth" }
rust-panosmcp-core = { version = "0.2.0", path = "../rust-panosmcp-core" }
rustix.workspace = true
rustls.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
rcgen = "0.14"
reqwest.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-streamable-http-client-reqwest"] }
tempfile = "3"
tower.workspace = true

[lints]
workspace = true
